# dstoolkit-for-topic-modelling

./: .env_template  .gitignore  01_data_preparation.ipynb  02_model_training.ipynb  03_check_convergence.ipynb  04_coherence_evaluation.ipynb  05_topic_analyser.ipynb  README.md  pyproject.toml
.github/: CODEOWNERS
configs/: model_configs.jsonl
data/: doc_term_matrix.pkl  stop_words_en.txt  vocab
models/: model_1.pkl  model_2.pkl  model_3.pkl
src/: data_utils.py  metrics_utils.py  openai_utils.py  topic_modeller.py  topic_utils.py
