[tool.poetry]
name = "dstoolkit-for-topic-modelling"
version = "0.1.0"
description = ""
authors = ["Mariflor Dunne-Vega and Natalia Glazyrina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
lda = "^3.0.2"
pyarrow = "^18.1.0"
datasets = "^3.1.0"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
openai = "^1.70.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
